--- a/index.html
+++ b/index.html
@@ -4,24 +4,28 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+        <!-- LINK FONTAWSOME -->
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer"/>
+
+        <!-- LINK CSS -->
         <link rel="stylesheet" href="./css/style.css">
         <title>Carosello Mono Array</title>
     </head>
     <body>
         <div class="container">
+            <!-- CONTENITORE IMMAGINI -->
             <div class="immagine">
-                <div class="item">
-                    <img src="./img/01.webp" alt="">
-                </div>
-                <div class="pulsanti">
-                    <div class="up"><i class="fa-solid fa-chevron-up"></i></div>
-                    <div class="down"><i class="fa-solid fa-chevron-down"></i></div>
-                </div>
+
+            </div>
+            <!-- CONTENITORE PULSANTI -->
+            <div class="pulsanti">
+                <div class="up"><i class="fa-solid fa-chevron-up"></i></div>
+                <div class="down"><i class="fa-solid fa-chevron-down"></i></div>
             </div>
         </div>
 
-
+        <!-- SCRIPT JAVASCRIPT -->
         <script type="text/javascript" src="./js/script.js"></script>
     </body>
 </html>
