--- a/BONUS 2/index.html
+++ b/BONUS 2/index.html
@@ -21,9 +21,7 @@
             <!-- CONTENITORE PULSANTI -->
             <div class="pulsanti">
                 <div class="up"><i class="fa-solid fa-chevron-up"></i></div>
-                <div class="container-right">
-                    <!-- <img class="item" src="./img/01.webp" alt=""> -->
-                </div>
+                <div class="container-right"></div>
                 <div class="down"><i class="fa-solid fa-chevron-down"></i></div>
             </div>
         </div>
